[gd_scene load_steps=8 format=3 uid="uid://c1v1ppm8x01cy"]

[ext_resource type="PackedScene" uid="uid://bds3pc6arkgvv" path="res://Games/RocketLander/scenes/ui/fuel_slider.tscn" id="1_mgo7f"]
[ext_resource type="Script" uid="uid://dbr1lj3lpo6hp" path="res://Games/RocketLander/scenes/ui/hud_controller.gd" id="1_n2p4f"]
[ext_resource type="Texture2D" uid="uid://bwn182o341f5n" path="res://Games/RocketLander/assets/sprites/Fuel gauge speedometer.png" id="3_8klnk"]
[ext_resource type="Texture2D" uid="uid://bgnwdu55fbsnw" path="res://Games/RocketLander/assets/sprites/E Button.png" id="4_8qguk"]
[ext_resource type="Texture2D" uid="uid://xl2ckpgdnknk" path="res://Games/RocketLander/assets/sprites/Left Arrow Button.png" id="4_gss2c"]
[ext_resource type="Texture2D" uid="uid://c56meuininoqc" path="res://Games/RocketLander/assets/sprites/Thrust Button.png" id="5_136eg"]
[ext_resource type="Texture2D" uid="uid://bf505qxaulaov" path="res://Games/RocketLander/assets/sprites/Right Arrow Button.png" id="5_h022r"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n2p4f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="FuelControls" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="FuelSlider" parent="MarginContainer/FuelControls" instance=ExtResource("1_mgo7f")]
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 65.0
offset_bottom = 305.0

[node name="FuelGauge" type="TextureRect" parent="MarginContainer/FuelControls"]
layout_mode = 0
offset_left = -18.0
offset_top = 212.0
offset_right = 82.0
offset_bottom = 312.0
texture = ExtResource("3_8klnk")
expand_mode = 1
stretch_mode = 5

[node name="LowerLeftControl" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="rotate_left_button" type="TextureButton" parent="MarginContainer/LowerLeftControl"]
layout_mode = 0
offset_top = -130.0
offset_right = 100.0
offset_bottom = -30.0
action_mode = 0
texture_normal = ExtResource("4_gss2c")
ignore_texture_size = true
stretch_mode = 5

[node name="rotate_right_button" type="TextureButton" parent="MarginContainer/LowerLeftControl"]
layout_mode = 0
offset_left = 110.0
offset_top = -130.0
offset_right = 210.0
offset_bottom = -30.0
action_mode = 0
texture_normal = ExtResource("5_h022r")
ignore_texture_size = true
stretch_mode = 5

[node name="LowerRightControl" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="boost_button" type="TextureButton" parent="MarginContainer/LowerRightControl"]
layout_mode = 0
offset_left = -300.0
offset_top = -130.0
offset_right = -200.0
offset_bottom = -30.0
texture_normal = ExtResource("4_8qguk")
ignore_texture_size = true
stretch_mode = 5

[node name="thrust_button" type="TextureButton" parent="MarginContainer/LowerRightControl"]
layout_mode = 0
offset_left = -150.0
offset_top = -130.0
offset_right = -50.0
offset_bottom = -30.0
action_mode = 0
texture_normal = ExtResource("5_136eg")
ignore_texture_size = true
stretch_mode = 5
